# m-app-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  makefile
migrations/: 20250504064915_initial-table.sql
src/: di.rs  main.rs
src/module/: app_module.rs  mod.rs
src/module/cashflow/: cashflow_module.rs  mod.rs
src/module/cashflow/v1/: cashflow_handler.rs  cashflow_usecase.rs  mod.rs
src/module/cashflow/v1/entity/model/: cashflow.rs
src/module/cashflow/v1/entity/request/: create_cashflow_request.rs  get_cashflow_request.rs  list_cashflow_request.rs  mod.rs  update_cashflow_request.rs
src/module/cashflow/v1/entity/response/: cashflow_response.rs  list_cashflow_response.rs  mod.rs
src/module/cashflow/v1/handler/: mod.rs
src/module/cashflow/v1/repository/: mod.rs
src/module/cashflow/v1/usecase/: cashflow_usecase.rs  mod.rs
src/module/product/: mod.rs  product_module.rs
src/module/product/v1/: mod.rs  product_handler.rs  product_usecase.rs
src/module/product/v1/entity/model/: product.rs
src/module/product/v1/entity/request/: create_product_request.rs  get_product_request.rs  list_product_request.rs  (+2 more)
src/module/product/v1/usecase/: mod.rs  product_usecase.rs
src/module/repository/: cashflow_repository.rs  mod.rs  product_repository.rs  transaction_repository.rs
src/module/transaction/: mod.rs  transaction_module.rs
src/module/transaction/v1/: mod.rs  transaction_handler.rs  transaction_usecase.rs
src/pkg/: bcrypt.rs  config.rs  custom_error.rs  db.rs  health.rs  helper.rs  jwt.rs  mod.rs  pagination.rs  response.rs
(+13 files in other folders)
