[package]
name = "m-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
axum = "0.7"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
config = "0.15.11"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tower-cookies = "0.11.0"
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bcrypt = "0.15"
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
log = "0.4"